fix(dropdown): text overflow in dropdown-option (#358)
* fix(dropdown): added word-wrap: anywhere and padding over height

* fix(dropdown): removed flex aligement

* fix(dropdown): corrected CSS styling

* fix(dropdown): multiselect option clickable

* fix(dropdown): updated line-height for the placeholder

--- a/packages/core/src/components/dropdown/dropdown-button.scss
+++ b/packages/core/src/components/dropdown/dropdown-button.scss
@@ -20,6 +20,7 @@
 
     &.placeholder {
       color: var(--tds-dropdown-placeholder-color);
+      line-height: 1.3;
     }
 
     &.value {
